Env vars example

--- a/api/.env
+++ b/api/.env
@@ -15,6 +15,8 @@
 
 # API Platform distribution
 TRUSTED_PROXIES=127.0.0.1
+
+# Will be overwritten by value comming from env that is set in docker-compose
 TRUSTED_HOSTS=^localhost$
 
 ###> symfony/framework-bundle ###
@@ -28,6 +30,8 @@ APP_SECRET=!ChangeMe!
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
+
+# Will be overwritten by value comming from env that is set in docker-compose
 DATABASE_URL="postgresql://api-platform:!ChangeMe!@127.0.0.1:5432/api?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
