JWT and Auth added

--- a/api/.env
+++ b/api/.env
@@ -38,3 +38,9 @@ DATABASE_URL="postgresql://api-platform:!ChangeMe!@127.0.0.1:5432/api?serverVers
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=7f6e5398367ea9422d3912b99a6d3e8e
+###< lexik/jwt-authentication-bundle ###
