--- a/api/composer.json
+++ b/api/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "guzzlehttp/guzzle": "^7.0",
+        "lexik/jwt-authentication-bundle": "^2.14",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
         "symfony/asset": "5.3.*",
@@ -32,9 +33,13 @@
     },
     "require-dev": {
         "api-platform/schema-generator": "^3.0",
+        "hautelook/alice-bundle": "^2.9",
+        "justinrainbow/json-schema": "^5.2",
+        "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "5.3.*",
         "symfony/css-selector": "5.3.*",
         "symfony/debug-bundle": "5.3.*",
+        "symfony/http-client": "5.3.*",
         "symfony/maker-bundle": "^1.21",
         "symfony/phpunit-bridge": "5.3.*",
         "symfony/stopwatch": "5.3.*",
