--- a/api/phpunit.xml.dist
+++ b/api/phpunit.xml.dist
@@ -15,6 +15,9 @@
         <server name="SHELL_VERBOSITY" value="-1" />
         <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
         <server name="SYMFONY_PHPUNIT_VERSION" value="9.5" />
+
+        <env name="APP_ENV" value="test" force="true" />
+        <env name="TRUSTED_HOSTS" value="example.com" force="true" />
     </php>
 
     <testsuites>
