--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -30,3 +30,9 @@ services:
 
     App\DataFixtures\Providers\HashPasswordProvider:
         tags: [ { name: nelmio_alice.faker.provider } ]
+
+    App\EventListener\SetCreatorOnPersist:
+        tags:
+            -
+                name: 'doctrine.event_listener'
+                event: 'prePersist'
