--- a/api/config/packages/api_platform.yaml
+++ b/api/config/packages/api_platform.yaml
@@ -1,6 +1,7 @@
 api_platform:
     title: Hello API Platform
     version: 1.0.0
+    allow_plain_identifiers: true
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
     patch_formats:
