--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -33,6 +33,11 @@ services:
 
     App\EventListener\SetCreatorOnPersist:
         tags:
-            -
-                name: 'doctrine.event_listener'
+            -   name: 'doctrine.event_listener'
                 event: 'prePersist'
+
+    acme_api.event.jwt_created_listener:
+        class: App\EventListener\JWTCreatedListener
+        arguments: [ '@request_stack' ]
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created, method: onJWTCreated }
